--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 server: # REST and WS server
-  port: DYNAMICPORT
-  address: 0.0.0.0
+  port: 2333
+  address: 127.0.0.1
 lavalink:
   server:
     password: "youshallnotpass"
@@ -10,11 +10,11 @@ lavalink:
       soundcloud: true
       twitch: true
       vimeo: true
-      mixer: true
       http: true
       local: false
     bufferDurationMs: 400
     youtubePlaylistLoadLimit: 6 # Number of pages at 100 each
+    playerUpdateInterval: 5 # How frequently to send player updates to clients, in seconds
     youtubeSearchEnabled: true
     soundcloudSearchEnabled: true
     gc-warnings: true
@@ -32,14 +32,15 @@ metrics:
 
 sentry:
   dsn: ""
+  environment: ""
 #  tags:
 #    some_key: some_value
 #    another_key: another_value
 
 logging:
   file:
-    max-history: 5
-    max-size: 5MB
+    max-history: 30
+    max-size: 1GB
   path: ./logs/
 
   level:
